# GlTexture

./: README.md  local.properties
app/: .gitignore  build.gradle
app/src/main/cpp/: CMakeLists.txt
